--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -66,7 +66,8 @@
                                         <input type="checkbox" id="send" name="saleOption" data-toggle="toggle" data-on="OUI" data-off="NON">
                                     </div>
                                 </div>
-                                <input type="button" name="next" class="next action-button" value="Suivant" />
+<!--                                 <input type="button" name="next" class="next action-button" value="Suivant" /> -->
+                                <button type="submit" class="next action-button">Suivant</button>
                             </fieldset>
                         </form>
                         <form method="post" action="/inscription_editeur">
@@ -83,7 +84,8 @@
                                     </div>
                                 </div>
                                 <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
-                                <input type="button" name="next" class="next action-button" value="Suivant" />
+<!--                                 <input type="button" name="next" class="next action-button" value="Suivant" /> -->
+                                <button type="submit" class="next action-button">Suivant</button>
                             </fieldset>
                         </form>
                                 
