--- a/src/main/resources/templates/navBar.html
+++ b/src/main/resources/templates/navBar.html
@@ -1,7 +1,7 @@
 <header th:fragment="top">
   <!-- Fixed navbar -->
   <nav class="mb-1 navbar fixed-top navbar-expand-lg navbar-dark default-color">
-    <a class="nav-link p-0" href="index.html">
+    <a class="nav-link p-0" href="home.html">
       <img src="../pictures/logo_transparent2.png" class="rounded-circle z-depth-0" alt="Logo Orléans Joue" height="70">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-333"
@@ -11,13 +11,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent-333">
       <ul class="navbar-nav col-12 col-lg-6 cd-main-nav">
 
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-auto" th:if="${navbarLinks.currentPage} == 'home'">
           <a class="nav-link navElement" href="#evenement">Evenement</a>
         </li>
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-auto" th:if="${navbarLinks.currentPage} == 'home'">
           <a class="nav-link navElement" href="#inscription">Mon Inscription</a>
         </li>
-        <li class="nav-item mx-auto">
+        <li class="nav-item mx-auto" th:if="${navbarLinks.currentPage} == 'home'">
           <a class="nav-link navElement" href="#information">Mes Informations</a>
         </li>
         <div class="dropdown-divider mt-3 mb-0"></div>
