--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -11,17 +11,51 @@
 	    <link rel="stylesheet" href="../CSS/style.css">
 	    <link rel="stylesheet" href="../CSS/footer.css">
 	    <link rel="stylesheet" href="../CSS/navBar.css">
+	    <link rel="stylesheet" href="../CSS/subscribeEditorModification.css">
 	    <title>Modification de votre inscription</title>  
 	</head>
 	<body>
 	    <header th:replace="navBar.html :: top"></header>
-	    <main>	
-		    <div class="container">
-			  <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#form">
-			    See Modal with Form
-			  </button>  
-			</div>
-			<div th:replace="modaleModificationGame :: modale"></div>
+	    <main>
+	    	<hr />
+	    	<section id="Games">
+	    		<h2>Mes jeux:</h2>
+				<div class="container-fluid">
+			    	<div class="row justify-content-center">
+						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="item : ${new int[18]}">
+							<div class="img-container">
+								<img class="card-img-top card-img-custom" src="https://picsum.photos/200/300" alt="Card image cap">
+								<div class="d-flex positionButton justify-content-around">
+									<a href="/deleteGame" type="button" class="messageDelete">
+										<p class="buttonP">Supprimer</p>
+									</a>
+									<a type="button" data-toggle="modal" data-target="#form" class="messageEdit">
+										<p class="buttonP">Editer</p>
+									</a>
+								</div>
+							</div>
+							<div class="card-body card-body-custom">
+						    	<p class="card-text card-text-custom">Shadow of the darkness</p>
+								<div class="d-flex d-lg-none svgContainer justify-content-around p-2">
+									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16 deleteUpdateSVG deleteSVG" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
+									<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="pencil-alt" class="svg-inline--fa fa-pencil-alt fa-w-16 deleteUpdateSVG" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M497.9 142.1l-46.1 46.1c-4.7 4.7-12.3 4.7-17 0l-111-111c-4.7-4.7-4.7-12.3 0-17l46.1-46.1c18.7-18.7 49.1-18.7 67.9 0l60.1 60.1c18.8 18.7 18.8 49.1 0 67.9zM284.2 99.8L21.6 362.4.4 483.9c-2.9 16.4 11.4 30.6 27.8 27.8l121.5-21.3 262.6-262.6c4.7-4.7 4.7-12.3 0-17l-111-111c-4.8-4.7-12.4-4.7-17.1 0zM124.1 339.9c-5.5-5.5-5.5-14.3 0-19.8l154-154c5.5-5.5 14.3-5.5 19.8 0s5.5 14.3 0 19.8l-154 154c-5.5 5.5-14.3 5.5-19.8 0zM88 424h48v36.3l-64.5 11.3-31.1-31.1L51.7 376H88v48z"></path></svg>
+								</div>
+							</div>
+
+						</div>
+						<!-- card add -->
+						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" data-toggle="modal" data-target="#form">
+							<div class="img-container">
+							<svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="plus-circle" class="svg-inline--fa fa-plus-circle fa-w-16 card-img-top card-img-custom" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm144 276c0 6.6-5.4 12-12 12h-92v92c0 6.6-5.4 12-12 12h-56c-6.6 0-12-5.4-12-12v-92h-92c-6.6 0-12-5.4-12-12v-56c0-6.6 5.4-12 12-12h92v-92c0-6.6 5.4-12 12-12h56c6.6 0 12 5.4 12 12v92h92c6.6 0 12 5.4 12 12v56z"></path></svg>
+							</div>
+							<div class="card-body card-body-custom">
+						    	<p class="card-text">Add a game</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div th:replace="modaleModificationGame :: modale"></div>
+			</section>
 		</main>	
 		<footer th:replace="footer :: bottom"></footer>		
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
