--- a/src/main/resources/templates/modaleModificationGame.html
+++ b/src/main/resources/templates/modaleModificationGame.html
@@ -2,7 +2,7 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header border-bottom-0">
-        <h5 class="modal-title" id="exampleModalLabel">Create Account</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Modification du jeux</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -10,17 +10,35 @@
       <form>
         <div class="modal-body">
           <div class="form-group">
-            <label for="email1">Email address</label>
-            <input type="email" class="form-control" id="email1" aria-describedby="emailHelp" placeholder="Enter email">
-            <small id="emailHelp" class="form-text text-muted">Your information is safe with us.</small>
+            <label for="name">Nom du jeux</label>
+            <input type="text" class="form-control" id="name" name="name" aria-describedby="nameGameHelp" value="nom du jeux">
+            <small id="nameGameHelp" class="form-text text-muted">Indiquez le nom du jeux</small>
           </div>
           <div class="form-group">
-            <label for="password1">Password</label>
-            <input type="password" class="form-control" id="password1" placeholder="Password">
+            <label for="picture">Image:</label>
+				<input type="file" id="picture" name="picture" aria-describedby="pictureHelp" accept="image/png, image/jpeg">
+				<img id="picturePreview" src="#" alt="your image" class="d-none"/>            
+				<small id="pictureHelp" class="form-text text-muted">Choisissez une image</small>
+          </div>        
+          <div class="form-group">
+            <label for="author">Auteur</label>
+            <input type="text" class="form-control" id="author" name="author" aria-describedby="authorHelp" placeholder="Enter email" value="nom de l'auteur">
+            <small id="authorHelp" class="form-text text-muted">Indiquez l'auteur du jeux</small>
           </div>
           <div class="form-group">
-            <label for="password1">Confirm Password</label>
-            <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
+            <label for="publicationDate">Date de publication</label>
+            <input type="date" class="form-control" id="publicationDate" name="publicationDate" aria-describedby="dateHelp" placeholder="Date de publication">
+          	<small id="dateHelp" class="form-text text-muted">Indiquez la date de publication du jeux</small>
+          </div>
+          <div class="form-group">
+            <label for="description">Description</label>
+            <input type="textArea" class="form-control" id="description" aria-describedby="descriptionHelp" name="description" value="description">
+          	<small id="descriptionHelp" class="form-text text-muted">Indiquez la description du jeux*</small>
+          </div>
+          <div class="form-group">
+            <label for="webLink">URL</label>
+            <input type="URL" class="form-control" id="url" name="webLink" aria-describedby="linkHelp">
+            <small id="linkHelp" class="form-text text-muted">Lien du jeux (optionnel)</small>
           </div>
         </div>
         <div class="modal-footer border-top-0 d-flex justify-content-center">
